--- a/episodes/season_16.yml
+++ b/episodes/season_16.yml
@@ -3,6 +3,7 @@ episodes:
 - title: Treehouse of Horror XV
   season: 16
   episode: 1
+  release_date:
   description: On Halloween... Flanders can predict when people will die; in Victorian
     London, Lisa and Bart hunt for a killer; the Simpsons take a fantastic voyage
     after Mr. Burns swallows a miniaturized Maggie.
@@ -13,6 +14,7 @@ episodes:
 - title: All's Fair in Oven War
   season: 16
   episode: 2
+  release_date:
   description: Marge enters a bakeoff competition, but ends up sabotaging the other
     entries; Bart decides to live the life of a swinger after discovering Playdude
     magazine.
@@ -23,6 +25,7 @@ episodes:
 - title: Sleeping with the Enemy
   season: 16
   episode: 3
+  release_date:
   description: Lisa becomes self-conscious about her weight after kids at school make
     fun of her posterior;  Marge takes bully Nelson Muntz under her wing ... much
     to Bart's horror.
@@ -33,6 +36,7 @@ episodes:
 - title: She Used to Be My Girl
   season: 16
   episode: 4
+  release_date:
   description: Marge wonders if she made the right choices in life after she encounters
     a successful high school classmate who has traveled the world as a television
     news reporter.
@@ -43,6 +47,7 @@ episodes:
 - title: Fat Man and Little Boy
   season: 16
   episode: 5
+  release_date:
   description: Homer builds a nuclear reactor for Lisa's science project; Bart makes
     money creating his own line of t-shirts.
   disneyplus_id:
@@ -52,6 +57,7 @@ episodes:
 - title: Midnight Rx
   season: 16
   episode: 6
+  release_date:
   description: Homer and Grampa smuggle drugs out of Canada after Mr. Burns terminates
     his company's employee prescription drug program.
   disneyplus_id:
@@ -61,6 +67,7 @@ episodes:
 - title: Mommie Beerest
   season: 16
   episode: 7
+  release_date:
   description: Homer mortgages his house to save Moe's bar, but Marge ends up taking
     control of the business and spends so much time with Moe that Homer fears his
     marriage is in trouble.
@@ -71,6 +78,7 @@ episodes:
 - title: Homer and Ned's Hail Mary Pass
   season: 16
   episode: 8
+  release_date:
   description: After teaching famous athletes some victory dance moves, Homer is chosen
     to produce the Super Bowl half-time show; Flanders makes a movie featuring violent
     reenactments of biblical events.
@@ -81,6 +89,7 @@ episodes:
 - title: Pranksta Rap
   season: 16
   episode: 9
+  release_date:
   description: After sneaking off to a rap concert, Bart fakes his own kidnapping
     and inadvertently implicates Milhouse's father in the 'crime.'
   disneyplus_id:
@@ -90,6 +99,7 @@ episodes:
 - title: There's Something About Marrying
   season: 16
   episode: 10
+  release_date:
   description: When tourists shun Springfield, the town legalizes gay marriage in
     hopes of reversing the dire economic slowdown - and Homer makes money by becoming
     an ordained minister.
@@ -100,6 +110,7 @@ episodes:
 - title: On a Clear Day I Can't See My Sister
   season: 16
   episode: 11
+  release_date:
   description: After Bart torments his sister during a school field trip, Lisa gets
     a restraining order; Homer takes a job as a greeter at a local mega-store.
   disneyplus_id:
@@ -109,6 +120,7 @@ episodes:
 - title: Goo Goo Gai Pan
   season: 16
   episode: 12
+  release_date:
   description: Homer pretends to be Selma's husband when Selma travels to China to
     adopt a baby.
   disneyplus_id:
@@ -118,6 +130,7 @@ episodes:
 - title: Mobile Homer
   season: 16
   episode: 13
+  release_date:
   description: Bart and Lisa attempt to save Homer and Marge's marriage after Homer
     spends the family's savings on a recreational vehicle.
   disneyplus_id:
@@ -127,6 +140,7 @@ episodes:
 - title: The Seven-Beer Snitch
   season: 16
   episode: 14
+  release_date:
   description: Homer becomes a prison snitch after he's convicted of breaking an outdated
     law; Lisa and Bart discover that Snowball II has a secret life.
   disneyplus_id:
@@ -136,6 +150,7 @@ episodes:
 - title: Future-Drama
   season: 16
   episode: 15
+  release_date:
   description: Using Professor Frink's astrological projection machine, Bart and Lisa
     peer into the future, where Bart breaks Lisa's heart by taking away her scholarship
     to Yale.
@@ -146,6 +161,7 @@ episodes:
 - title: Don't Fear the Roofer
   season: 16
   episode: 16
+  release_date:
   description: Homer ends up in a mental institution after Marge grows convinced the
     contractor he befriended is a figment of his imagination; Marge allows Santa's
     Little Helper to stay at Grampa's retirement home.
@@ -156,6 +172,7 @@ episodes:
 - title: The Heartbroke Kid
   season: 16
   episode: 17
+  release_date:
   description: Bart has a heart attack after he becomes addicted to junk food; the
     Simpsons turn the house into a youth hostel, which is soon overrun by German backpackers.
   disneyplus_id:
@@ -165,6 +182,7 @@ episodes:
 - title: A Star is Torn
   season: 16
   episode: 18
+  release_date:
   description: Homer behaves like a domineering stage mom after Lisa achieves fame
     by appearing in a singing competition on The Krusty the Clown Show.
   disneyplus_id:
@@ -174,6 +192,7 @@ episodes:
 - title: Thank God It's Doomsday
   season: 16
   episode: 19
+  release_date:
   description: Homer is declared a prophet after he convinces everyone in town that
     the end of the world is at hand.
   disneyplus_id:
@@ -183,6 +202,7 @@ episodes:
 - title: The Father, The Son, and The Holy Guest Star
   season: 16
   episode: 20
+  release_date:
   description: After Bart gets expelled, he's enrolled in Catholic school, where he
     befriends a priest who wants to convert him and Homer to Catholicism.
   disneyplus_id:
@@ -192,6 +212,7 @@ episodes:
 - title: Home Away From Homer
   season: 16
   episode: 21
+  release_date:
   description: Flanders feels like a fool after sorority girls run an adult Web site
     from his house without his knowledge, so he and the boys move away from Springfield...
     to a town where everyone looks like a Hummel figurine.
