--- a/episodes/season_31.yml
+++ b/episodes/season_31.yml
@@ -3,6 +3,7 @@ episodes:
 - title: The Winter of Our Monetized Content
   season: 31
   episode: 1
+  release_date:
   description: Homer and Bart become viral sensations.
   disneyplus_id: ca497a6c-9cac-4e92-91a4-af95a82d5680
   simpsonsworld_id:
@@ -11,6 +12,7 @@ episodes:
 - title: Go Big or Go Homer
   season: 31
   episode: 2
+  release_date:
   description: Homer becomes a mentor to an unstable intern who idolizes him.
   disneyplus_id: 523a90e8-f4fd-40c2-977a-9929b423319d
   simpsonsworld_id:
@@ -19,6 +21,7 @@ episodes:
 - title: The Fat Blue Line
   season: 31
   episode: 3
+  release_date:
   description: Fat Tony is framed, and Wiggum must exonerate him.
   disneyplus_id: 78b1bbea-6468-464c-a94f-5ef375db4c7b
   simpsonsworld_id:
@@ -27,6 +30,7 @@ episodes:
 - title: Treehouse of Horror XXX
   season: 31
   episode: 4
+  release_date:
   description: This 666th episode of the Simpsons parodies spooky favorites.
   disneyplus_id: bf3b47dd-1e1d-41b2-b11b-1b6d5434d23b
   simpsonsworld_id:
@@ -35,6 +39,7 @@ episodes:
 - title: Gorillas on the Mast
   season: 31
   episode: 5
+  release_date:
   description: Homer buys a boat, and Lisa frees a whale.
   disneyplus_id: 3915e644-5757-4bbe-a9f8-02bdadc080be
   simpsonsworld_id:
@@ -43,6 +48,7 @@ episodes:
 - title: Marge the Lumberjill
   season: 31
   episode: 6
+  release_date:
   description: Marge worries that her life is boring, so she takes up timbersports.
   disneyplus_id: 604833fa-ba0e-49cd-9f45-6704aaeee7da
   simpsonsworld_id:
@@ -51,6 +57,7 @@ episodes:
 - title: "Livin' la Pura Vida"
   season: 31
   episode: 7
+  release_date:
   description: On a dream Coasta Rican vacation, Homer is horrified to discover that Patty's new girlfriend is cool.
   disneyplus_id: 4109ff3d-6c74-41af-bfc9-5e7582b0dd40
   simpsonsworld_id:
@@ -59,6 +66,7 @@ episodes:
 - title: Thanksgiving of Horror
   season: 31
   episode: 8
+  release_date:
   description: Three tales of Thanksgiving terror.
   disneyplus_id: ea3e5e5a-ce1c-40c1-9c03-d3beae6800e6
   simpsonsworld_id:
@@ -67,6 +75,7 @@ episodes:
 - title: Todd, Todd, Why Hast Thou Forsaken Me?
   season: 31
   episode: 9
+  release_date:
   description: Todd loses his faith in God.
   disneyplus_id: dfc9fb50-95ca-4ccd-ab78-52f99bc63f94
   simpsonsworld_id:
@@ -75,6 +84,7 @@ episodes:
 - title: Bobby, It's Cold Outside
   season: 31
   episode: 10
+  release_date:
   description: Sideshow Bob returns, and Christmas is threatened.
   disneyplus_id: 887a8249-45d2-4648-bf8f-857068bc51ec
   simpsonsworld_id:
@@ -83,6 +93,7 @@ episodes:
 - title: Hail to the Teeth
   season: 31
   episode: 11
+  release_date:
   description: "Marge's old suitor, Artie Ziff, returns, and he's engaged."
   disneyplus_id: e790d895-efe3-4bc6-afa5-e638f558b453
   simpsonsworld_id:
@@ -91,6 +102,7 @@ episodes:
 - title: The Miseducation of Lisa Simpson
   season: 31
   episode: 12
+  release_date:
   description: When Springfield builds a S.T.E.M school, Lisa and Bart discover the terrifying jobs of the future.
   disneyplus_id: 26fa2ab1-13ec-4faa-934b-e153dbed8daa
   simpsonsworld_id:
@@ -99,6 +111,7 @@ episodes:
 - title: Frinkcoin
   season: 31
   episode: 13
+  release_date:
   description: Professor Frink develops a crypto currency that makes him rich.
   disneyplus_id: a4af5b0e-6078-484b-a3f9-0a70245947b7
   simpsonsworld_id:
@@ -107,6 +120,7 @@ episodes:
 - title: Bart the Bad Guy
   season: 31
   episode: 14
+  release_date:
   description: When Bart sees a superhero movie early, he blackmails the town not to spoil the ending.
   disneyplus_id: d8e4279f-206e-4aef-ae5b-b93349effcc0
   simpsonsworld_id:
@@ -115,6 +129,7 @@ episodes:
 - title: Screenless
   season: 31
   episode: 15
+  release_date:
   description: The family goes without electronic devices.
   disneyplus_id: 1416e154-0d9c-43db-b2c3-84359f77d64d
   simpsonsworld_id:
@@ -123,6 +138,7 @@ episodes:
 - title: Better Off Ned
   season: 31
   episode: 16
+  release_date:
   description: After a prank, Ned mentors Bart, and his life greatly improves.
   disneyplus_id: a65f610d-d2be-49fc-b6c7-c04e580af1a3
   simpsonsworld_id:
@@ -131,6 +147,7 @@ episodes:
 - title: Highway to Well
   season: 31
   episode: 17
+  release_date:
   description: Marge discovers she has a talent for healing when she works at a cannabis dispenary.
   disneyplus_id: 562d6a94-d1e1-4cca-8615-8dbbcbaf21d1
   simpsonsworld_id:
@@ -139,6 +156,7 @@ episodes:
 - title: The Incredible Lightness of Being a Baby
   season: 31
   episode: 18
+  release_date:
   description: Cletus becomes a helium tycoon.
   disneyplus_id: f91d19d8-aeeb-4ca8-bcac-6384591148ef
   simpsonsworld_id:
@@ -147,6 +165,7 @@ episodes:
 - title: "Warrin' Priests"
   season: 31
   episode: 19
+  release_date:
   description: Homer Pete Holmes guest stars as a mysterious new preacher.
   disneyplus_id: 7c6ef11c-f012-420a-95fe-27479b120221
   simpsonsworld_id:
@@ -155,6 +174,7 @@ episodes:
 - title: "Warrin' Priests Part Two"
   season: 31
   episode: 20
+  release_date:
   description: Reverend Lovejoy uncovers the truth about the popular, new preacher.
   disneyplus_id: bb8d939d-007c-4627-8922-74a6e5cd7ef1
   simpsonsworld_id:
@@ -163,6 +183,7 @@ episodes:
 - title: The Hateful Eight-Year-Olds
   season: 31
   episode: 21
+  release_date:
   description: Lisa is trapped at the sleepover from hell.
   disneyplus_id: e5cbcb10-6230-4647-9df9-db1fe728931c
   simpsonsworld_id:
@@ -171,6 +192,7 @@ episodes:
 - title: The Way of the Dog
   season: 31
   episode: 22
+  release_date:
   description: "The Simpsons explore the tragic past of Santa's Little Helper."
   disneyplus_id: 4e163c17-3990-4043-8439-e255f0702b0e
   simpsonsworld_id:
