--- a/episodes/season_03.yml
+++ b/episodes/season_03.yml
@@ -3,6 +3,7 @@ episodes:
 - title: Stark Raving Dad
   season: 3
   episode: 1
+  release_date:
   description: Homer is institutionalized after Bart fills out his sanity test.  A
     man who thinks he is Michael Jackson helps Bart write a song for Lisa when he
     forgets her birthday.
@@ -13,6 +14,7 @@ episodes:
 - title: Mr. Lisa Goes to Washington
   season: 3
   episode: 2
+  release_date:
   description: The Simpsons travel to the Nation's Capitol when Lisa becomes a semifinalist
     in an essay contest on patriotism.
   disneyplus_id: 30e6b625-ad02-4c52-ba41-571b68eee431
@@ -22,6 +24,7 @@ episodes:
 - title: When Flanders Failed
   season: 3
   episode: 3
+  release_date:
   description: Ned Flanders opens a store for left-handed people and Homer is overjoyed
     when it performs poorly.
   disneyplus_id: bba00c31-32ab-4167-9990-d44ca856fb77
@@ -31,6 +34,7 @@ episodes:
 - title: Bart the Murderer
   season: 3
   episode: 4
+  release_date:
   description: Bart fraternizes with a gang of mobsters and becomes the prime suspect
     when Principal Skinner mysteriously disappears.
   disneyplus_id: 062bfbc7-f1ac-4c7f-9ccc-bd2e96fd6da4
@@ -40,6 +44,7 @@ episodes:
 - title: Homer Defined
   season: 3
   episode: 5
+  release_date:
   description: Homer becomes a hero when he averts a catastrophe at the power plant,
     but what is perceived as his skill of being a quick thinker is actually dumb luck.
   disneyplus_id: 03be2e07-7414-436a-9522-e697bd015483
@@ -49,6 +54,7 @@ episodes:
 - title: Like Father, Like Clown
   season: 3
   episode: 6
+  release_date:
   description: Bart and Lisa scheme to reunite Krusty the Clown with his father, Rabbi
     Krustofsky, who disowned him for not carrying on the family tradition.
   disneyplus_id: 27977583-ce54-45e5-8c9e-3ea55d551a3e
@@ -58,6 +64,7 @@ episodes:
 - title: Treehouse of Horror II
   season: 3
   episode: 7
+  release_date:
   description: The Simpsons eat too much candy on Halloween and experience nightmarish
     tales of horror while they sleep.
   disneyplus_id: 1d2183e7-f0c6-4b61-abd7-47688dccfd15
@@ -67,6 +74,7 @@ episodes:
 - title: Lisa's Pony
   season: 3
   episode: 8
+  release_date:
   description: Homer realizes that he never shows Lisa the attention she deserves
     and buys her a pony.
   disneyplus_id: 9ce55c08-4635-4cc8-857c-081460a2480e
@@ -76,6 +84,7 @@ episodes:
 - title: Saturdays of Thunder
   season: 3
   episode: 9
+  release_date:
   description: Realizing he has not been a good father to Bart, Homer aids his son
     in building a soap box racer.
   disneyplus_id: b1ecdef1-ffef-4cb1-b7cc-3980a258cc69
@@ -85,6 +94,7 @@ episodes:
 - title: Flaming Moe's
   season: 3
   episode: 10
+  release_date:
   description: Homer gives Moe the recipe for a unique alcoholic drink, and when it
     turns into a sensation, Moe takes credit, and the profits, from its success.
   disneyplus_id: 796cd258-4056-43ab-9268-4932550f11f5
@@ -94,6 +104,7 @@ episodes:
 - title: Burns Verkaufen der Kraftwerk
   season: 3
   episode: 11
+  release_date:
   description: Homer is fired from his job when a German firm buys the power plant
     from Mr. Burns.
   disneyplus_id: dd37faf9-f191-4a97-99c4-2cf7e966e441
@@ -103,6 +114,7 @@ episodes:
 - title: I Married Marge
   season: 3
   episode: 12
+  release_date:
   description: When Marge believes she may be pregnant, Homer recounts how Bart was
     born.
   disneyplus_id: e7a09c16-34cd-448d-89c8-3a7cd3f1db05
@@ -112,6 +124,7 @@ episodes:
 - title: Radio Bart
   season: 3
   episode: 13
+  release_date:
   description: Using his Superstar Celebrity microphone, Bart tricks all of Springfield
     into believing that a child has fallen down a well.  But when he falls into the
     same well, Bart cannot get anyone to save him.
@@ -122,6 +135,7 @@ episodes:
 - title: Lisa the Greek
   season: 3
   episode: 14
+  release_date:
   description: Lisa accurately predicts the winners of sporting events that Homer
     gambles on so she can be closer to her father.
   disneyplus_id: f4faa613-2619-484b-b9d5-84cb7907b60e
@@ -131,6 +145,7 @@ episodes:
 - title: Homer Alone
   season: 3
   episode: 15
+  release_date:
   description: When Marge reaches the breaking point, she leaves for a much needed
     vacation, leaving the rest of the family to realize how much she does for them.
   disneyplus_id: affe697b-246e-4e2b-b314-86abb18f51f3
@@ -140,6 +155,7 @@ episodes:
 - title: Bart the Lover
   season: 3
   episode: 16
+  release_date:
   description: When Bart discovers that his divorced teacher, Mrs. Krabappel, has
     placed a "personals" ad in the local newspaper, he decides to create fake correspondence.
   disneyplus_id: 8e541791-0374-4447-92d5-427e190347c0
@@ -149,6 +165,7 @@ episodes:
 - title: Homer at the Bat
   season: 3
   episode: 17
+  release_date:
   description: Mr. Burns bets one million dollars that his power plant's softball
     team will win the championship, then hires professional baseball players to be
     members of the team.
@@ -159,6 +176,7 @@ episodes:
 - title: Separate Vocations
   season: 3
   episode: 18
+  release_date:
   description: Bart finds new respect for the law and Lisa hangs out with the wrong
     crowd after they both take career aptitude tests.
   disneyplus_id: 84689699-9a61-4873-9e97-b92fdfdfd912
@@ -168,6 +186,7 @@ episodes:
 - title: Dog of Death
   season: 3
   episode: 19
+  release_date:
   description: The Simpsons must choose between frills and their dog when Santa's
     Little Helper needs an expensive operation to save its life.
   disneyplus_id: 2d3ca633-e681-408d-b43a-17d34c4e3429
@@ -177,6 +196,7 @@ episodes:
 - title: Colonel Homer
   season: 3
   episode: 20
+  release_date:
   description: Homer becomes the manager of a beautiful Country Western singer.
   disneyplus_id: dd81dd22-a6d1-490b-9e4d-86b5bf64e2b0
   simpsonsworld_id: 272215619762
@@ -185,6 +205,7 @@ episodes:
 - title: Black Widower
   season: 3
   episode: 21
+  release_date:
   description: To Bart's horror, Selma announces that her husband-to-be is none other
     than Sideshow Bob.
   disneyplus_id: d5a7bef2-e845-4439-916e-121bb33838c4
@@ -194,6 +215,7 @@ episodes:
 - title: The Otto Show
   season: 3
   episode: 22
+  release_date:
   description: Bart attends a Spinal Tap concert.  Otto loses his job driving the
     school bus and moves in with the Simpsons.
   disneyplus_id: 97b16e5f-ef0a-4bdb-b113-e8ceb248217a
@@ -203,6 +225,7 @@ episodes:
 - title: Bart's Friend Falls in Love
   season: 3
   episode: 23
+  release_date:
   description: Bart becomes jealous when Milhouse falls for a girl who transferred
     to their school.
   disneyplus_id: 44f88f5f-ef09-4102-a975-4cc963938ec3
@@ -212,6 +235,7 @@ episodes:
 - title: Brother, Can You Spare Two Dimes?
   season: 3
   episode: 24
+  release_date:
   description: 'Herb Powell asks his brother Homer to let him borrow $2000 to develop
     a new invention: a translator of baby gibberish.'
   disneyplus_id: 7262519a-bba5-44c2-a547-2c812ed2541d
