--- a/episodes/season_26.yml
+++ b/episodes/season_26.yml
@@ -3,6 +3,7 @@ episodes:
 - title: Clown in the Dumps
   season: 26
   episode: 1
+  release_date:
   description: 'The unthinkable happens: a Springfield resident dies.'
   disneyplus_id: 254b91ea-02ed-4b16-aa4e-03b594b89288
   simpsonsworld_id: 334920771636
@@ -11,6 +12,7 @@ episodes:
 - title: The Wreck of the Relationship
   season: 26
   episode: 2
+  release_date:
   description: Homer and Bart set sail on the relation ship.
   disneyplus_id: 6a793d21-929a-410a-8615-3f4444970e19
   simpsonsworld_id: 346737219924
@@ -19,6 +21,7 @@ episodes:
 - title: Super Franchise Me
   season: 26
   episode: 3
+  release_date:
   description: Marge opens a sandwich shop.
   disneyplus_id: c8a58eb9-dbab-471a-86b3-a04bc34c2cff
   simpsonsworld_id: 340536899599
@@ -27,6 +30,7 @@ episodes:
 - title: Treehouse of Horror XXV
   season: 26
   episode: 4
+  release_date:
   description: Don't miss the all-new, spooktacular Halloween special, "Treehouse
     of Horror XXV."
   disneyplus_id: 54d99d91-e952-4ff5-baf8-9eef1a054885
@@ -36,6 +40,7 @@ episodes:
 - title: Opposites-A-Frack
   season: 26
   episode: 5
+  release_date:
   description: An all-new episode featuring guest voice Jane Fonda, whose character
     falls for Mr. Burns.
   disneyplus_id: 0d02c072-ec15-4e51-b0eb-b0a8c683abd7
@@ -45,6 +50,7 @@ episodes:
 - title: Simpsorama
   season: 26
   episode: 6
+  release_date:
   description: The Simpsons travel to the 31st century.
   disneyplus_id: 4374e696-9cb9-4e95-b906-e623ad31593a
   simpsonsworld_id: 355593283530
@@ -53,6 +59,7 @@ episodes:
 - title: Blazed and Confused
   season: 26
   episode: 7
+  release_date:
   description: Bart faces a tough test at school when he gets a new teacher, Mr. Lassen,
     who vows to crush his spirit.
   disneyplus_id: 34716532-5c16-4b0a-97fd-d71a2807f87a
@@ -62,6 +69,7 @@ episodes:
 - title: Covercraft
   season: 26
   episode: 8
+  release_date:
   description: Homer forms a cover band with some of the other dads in town.
   disneyplus_id: a1ed36d5-3086-49b8-b83e-2d20e72fa12b
   simpsonsworld_id: 362239555757
@@ -70,6 +78,7 @@ episodes:
 - title: I Won't Be Home For Christmas
   season: 26
   episode: 9
+  release_date:
   description: Marge doesn't approve of Homer's Christmas spirits.
   disneyplus_id: 16914d01-b98b-4cf2-8904-36bd8f651e8f
   simpsonsworld_id: 368212547872
@@ -78,6 +87,7 @@ episodes:
 - title: The Man Who Came To Be Dinner
   season: 26
   episode: 10
+  release_date:
   description: An amusement park ride lands the Simpsons in outer space..
   disneyplus_id: ea171ef8-0dab-48f9-bec1-491775080bc4
   simpsonsworld_id: 379818563729
@@ -86,6 +96,7 @@ episodes:
 - title: Bart's New Friend
   season: 26
   episode: 11
+  release_date:
   description: Bart and Homer become BFF's.
   disneyplus_id: b30df722-986c-46ba-8e51-be92095b6e17
   simpsonsworld_id: 383002179865
@@ -94,6 +105,7 @@ episodes:
 - title: The Musk Who Fell to Earth
   season: 26
   episode: 12
+  release_date:
   description: Homer becomes muse to Elon Musk.
   disneyplus_id: 2ee937da-4304-4ca5-868d-472e189d942d
   simpsonsworld_id: 388773443652
@@ -102,6 +114,7 @@ episodes:
 - title: Walking Big and Tall
   season: 26
   episode: 13
+  release_date:
   description: Springfield gets a new town anthem.
   disneyplus_id: 645c035f-4f8f-4422-884e-333889eae9f4
   simpsonsworld_id: 395694659511
@@ -110,6 +123,7 @@ episodes:
 - title: My Fare Lady
   season: 26
   episode: 14
+  release_date:
   description: Marge trades in her mom-chauffeur hat for a real one.
   disneyplus_id: ff549ddd-2534-4769-9c8e-940e46363649
   simpsonsworld_id: 399385667625
@@ -118,6 +132,7 @@ episodes:
 - title: The Princess Guide
   season: 26
   episode: 15
+  release_date:
   description: Moe plots revenge over Nigerian e-mail scam.
   disneyplus_id: 77a22172-c5a9-4c80-b5ff-3d8fe21ecc3b
   simpsonsworld_id: 406163011894
@@ -126,6 +141,7 @@ episodes:
 - title: Sky Police
   season: 26
   episode: 16
+  release_date:
   description: The Springfield congregation turns to gambling to repair the church.
   disneyplus_id: 7571103b-40e7-4456-80b6-4d1856bc73b0
   simpsonsworld_id: 410018371522
@@ -134,6 +150,7 @@ episodes:
 - title: Waiting for Duffman
   season: 26
   episode: 17
+  release_date:
   description: When Duffman undergoes hip replacement surgery and retires, the company
     sets up a reality show competition to find his replacement.
   disneyplus_id: 8a3b1f5a-338d-4a7c-afcf-e3bb3933d0bb
@@ -143,6 +160,7 @@ episodes:
 - title: Peeping Mom
   season: 26
   episode: 18
+  release_date:
   description: Bart lies about being involved in a bulldozer crash, so Marge decides
     to follow him everywhere until he confesses.
   disneyplus_id: 7570ff99-2fd0-47a3-b275-404c5b96cc10
@@ -152,6 +170,7 @@ episodes:
 - title: The Kids Are All Fight
   season: 26
   episode: 19
+  release_date:
   description: When Homer gets an old film roll developed, the family takes a trip
     down memory lane to see the origins of how Bart and Lisa first started fighting
     with each other.
@@ -162,6 +181,7 @@ episodes:
 - title: Let's Go Fly A Coot
   season: 26
   episode: 20
+  release_date:
   description: The Simpsons learn about Grampa's days in the Air Force, and Bart takes
     up smoking to impress Milhouse's Dutch cousin.
   disneyplus_id: 6398510e-4e51-4a48-a538-5781de70918b
@@ -171,6 +191,7 @@ episodes:
 - title: Bull-E
   season: 26
   episode: 21
+  release_date:
   description: After Bart gets bullied at the school dance, Marge convinces the town
     to pass anti-bullying legislation.
   disneyplus_id: 677ab214-4cde-4a05-8767-369f7a59be8c
@@ -180,6 +201,7 @@ episodes:
 - title: Mathlete's Feat
   season: 26
   episode: 22
+  release_date:
   description: When a modernized Springfield Elementary has a technical meltdown,
     Lisa transforms it into a Waldorf school.
   disneyplus_id: ee46a17f-b96f-4db1-b8bf-0e25d09f9a59
