--- a/episodes/season_29.yml
+++ b/episodes/season_29.yml
@@ -3,6 +3,7 @@ episodes:
 - title: The Serfsons
   season: 29
   episode: 1
+  release_date:
   description: In a world of magic, Marge's mother is transformed into an Ice Walker
     and must rely on Lisa to use magic to help Homer afford the cure.
   disneyplus_id: 62eb0b5e-cc71-44d4-9179-4fc9709badc1
@@ -12,6 +13,7 @@ episodes:
 - title: Springfield Splendor
   season: 29
   episode: 2
+  release_date:
   description: Marge and Lisa decide to turns an unpleasant experience Lisa had into
     a successful graphic novel.
   disneyplus_id: df3b5ca2-828d-4685-b0a2-7fca3b905044
@@ -21,6 +23,7 @@ episodes:
 - title: Whistler's Father
   season: 29
   episode: 3
+  release_date:
   description: Homer stumbles upon Maggie's incredible talent for whistling and decides
     to start her on the path to becoming a baby celebrity.
   disneyplus_id: f522c362-baa4-45a8-9dbb-e7c54e856648
@@ -30,6 +33,7 @@ episodes:
 - title: Treehouse of Horror XXVIII
   season: 29
   episode: 4
+  release_date:
   description: Maggie's body is overwhelmed by the malice of an ancient demon; in
     an alternate dimension, Lisa stumbles upon a disturbingly perfect version of her
     family.
@@ -40,6 +44,7 @@ episodes:
 - title: Grampy Can Ya Hear Me
   season: 29
   episode: 5
+  release_date:
   description: Grampa Simpson is finally able to hear the various things that people
     say about him after he receives a new hearing aid.
   disneyplus_id: 85c7dab6-27a8-4532-a64a-b1e8efac6aa4
@@ -49,6 +54,7 @@ episodes:
 - title: The Old Blue Mayor She Ain't What She Used to Be
   season: 29
   episode: 6
+  release_date:
   description: Marge decides to enter the race to become the next mayor of Springfield
     as she grows increasingly frustrated with how the local government operates.
   disneyplus_id: 4b81e3b0-082c-4be3-8b43-8cf5304af779
@@ -58,6 +64,7 @@ episodes:
 - title: Singin' in the Lane
   season: 29
   episode: 7
+  release_date:
   description: Homer and the guys try helping Moe cheer up by getting their old bowling
     team back together again, but they soon face a team of arrogant millionaires.
   disneyplus_id: 5c73167e-6f2a-4d75-a7ef-c1ee5b718a20
@@ -67,6 +74,7 @@ episodes:
 - title: Mr. Lisa's Opus
   season: 29
   episode: 8
+  release_date:
   description: In the future, Lisa works on writing her Harvard college application
     essay by reflecting on how certain disappointing birthdays made her who she is.
   disneyplus_id: 2bbb56ca-eee0-4959-b1bd-518503bacd06
@@ -76,6 +84,7 @@ episodes:
 - title: Gone Boy
   season: 29
   episode: 9
+  release_date:
   description: When Bart suddenly disappears, the town organizes a search party in
     the hopes of finding him.
   disneyplus_id: c1493562-a725-40ea-bc09-bb73cd2687f2
@@ -85,6 +94,7 @@ episodes:
 - title: Haw-Haw Land
   season: 29
   episode: 10
+  release_date:
   description: While the Simpson family attends a STEM conference, Lisa becomes attracted
     to a pianist and Bart learns about his natural talent for chemistry.
   disneyplus_id: a8ede7e7-a35f-4b09-b6bb-331796f1344e
@@ -94,6 +104,7 @@ episodes:
 - title: Fink Gets Testy
   season: 29
   episode: 11
+  release_date:
   description: When Mr. Burns begins to worry that the world is coming to an end,
     he starts testing all of the residents of to figure out who would be worth saving.
   disneyplus_id: 4ac1a815-2066-44e9-b1ae-a90028b40078
@@ -103,6 +114,7 @@ episodes:
 - title: Homer Is Where the Art Isn't
   season: 29
   episode: 12
+  release_date:
   description: Homer learns to love a piece of art.
   disneyplus_id: 94a1ceb3-ad15-42f3-adcd-92183c27caaf
   simpsonsworld_id:
@@ -111,6 +123,7 @@ episodes:
 - title: 3 Scenes Plus a Tag from a Marriage
   season: 29
   episode: 13
+  release_date:
   description: The Simpsons visit their old apartment and remember the days without their kids.
   disneyplus_id: 144bb57c-9b2d-4ec0-9815-ab6aef446b46
   simpsonsworld_id:
@@ -119,6 +132,7 @@ episodes:
 - title: Fears of a Clown
   season: 29
   episode: 14
+  release_date:
   description: Due to a general fear of clowns, Krusty can no longer do his job.
   disneyplus_id: b39ae395-33c3-482a-9583-3dcea6e42473
   simpsonsworld_id:
@@ -127,6 +141,7 @@ episodes:
 - title: No Good Read Goes Unpunished
   season: 29
   episode: 15
+  release_date:
   description: Bart tries to conquer Homer with help from a book.
   disneyplus_id: 9045ffae-7815-447b-833c-b5e04fc16a06
   simpsonsworld_id:
@@ -135,6 +150,7 @@ episodes:
 - title: King Leer
   season: 29
   episode: 16
+  release_date:
   description: Moe inherits a mattress business from his father.
   disneyplus_id: 665a15a4-6cb1-4dda-842c-2b064e272fec
   simpsonsworld_id:
@@ -143,6 +159,7 @@ episodes:
 - title: Lisa Gets the Blues
   season: 29
   episode: 17
+  release_date:
   description: The family goes to New Orleans where they try to recover from various traumas.
   disneyplus_id: aca8364d-d82c-49f3-a9ba-d7f963e04daa
   simpsonsworld_id:
@@ -151,6 +168,7 @@ episodes:
 - title: Forgive and Regret
   season: 29
   episode: 18
+  release_date:
   description: Grampa is about to die when he reveals a terrible secret.
   disneyplus_id: 37eeaacc-1476-42f5-9374-59d6bd3ebbac
   simpsonsworld_id:
@@ -159,6 +177,7 @@ episodes:
 - title: Left Behind
   season: 29
   episode: 19
+  release_date:
   description: Flanders loses his business and works with Homer at the plant.
   disneyplus_id: f509e8af-0f86-4c74-87ed-81b96b3c6dac
   simpsonsworld_id:
@@ -167,6 +186,7 @@ episodes:
 - title: Throw Grampa from the Dane
   season: 29
   episode: 20
+  release_date:
   description: The Simpsons visit Denmark and everyone but Homer falls in love with the happy country.
   disneyplus_id: b86d94e2-6991-463d-a0eb-0125d1aa4e8d
   simpsonsworld_id:
@@ -175,6 +195,7 @@ episodes:
 - title: Flanders' Ladder
   season: 29
   episode: 21
+  release_date:
   description: Bart is struck by lightning and has horrible dreams.
   disneyplus_id: 00e15f02-f80c-473c-b8ee-94dad1ba4a8b
   simpsonsworld_id:
