--- a/episodes/season_30.yml
+++ b/episodes/season_30.yml
@@ -3,6 +3,7 @@ episodes:
 - title: Bart's Not Dead
   season: 30
   episode: 1
+  release_date:
   description: Bart's cover for his lie backfires.
   disneyplus_id: 3abea375-9c5d-4b5d-8e7f-16818897c8a5
   simpsonsworld_id:
@@ -11,6 +12,7 @@ episodes:
 - title: Heartbreak Hotel
   season: 30
   episode: 2
+  release_date:
   description: Homer and Marge go on an amazing race type show where they are eliminated immediately.
   disneyplus_id: 7c3f3732-8a93-4a58-ab07-f658a8b5ff65
   simpsonsworld_id:
@@ -19,6 +21,7 @@ episodes:
 - title: My Way or the Highway to Heaven
   season: 30
   episode: 3
+  release_date:
   description: The Simpsons explore three ways to get into heaven.
   disneyplus_id: b1053f70-abf6-4fb3-a55b-6413e7cd45f8
   simpsonsworld_id:
@@ -27,6 +30,7 @@ episodes:
 - title: Treehouse of Horror XXIX
   season: 30
   episode: 4
+  release_date:
   description: The Simpsons battle spores from space and Grampa goes to a Jurassic Park-style senior home.
   disneyplus_id: 0b0b2d05-b113-4d25-b232-849b47bfe6cd
   simpsonsworld_id:
@@ -35,6 +39,7 @@ episodes:
 - title: Baby You Can't Drive My Car
   season: 30
   episode: 5
+  release_date:
   description: Marge and Homer work together at a cool tech company.
   disneyplus_id: 00a1d721-7669-4ee2-8da5-799f84ae2d90
   simpsonsworld_id:
@@ -43,6 +48,7 @@ episodes:
 - title: From Russia Without Love
   season: 30
   episode: 6
+  release_date:
   description: Bart orders a Russian bride for Moe. She turns Moe's life around, and he falls in love.
   disneyplus_id: c96aa7e3-f5d8-4b8e-aee2-a7c23cee6c55
   simpsonsworld_id:
@@ -51,6 +57,7 @@ episodes:
 - title: Werking Mom
   season: 30
   episode: 7
+  release_date:
   description: Marge becomes a successful Tupperware saleswoman because customers think she's a man in drag.
   disneyplus_id: 84953856-8319-4600-8072-799c2e1e32c4
   simpsonsworld_id:
@@ -59,6 +66,7 @@ episodes:
 - title: Krusty the Clown
   season: 30
   episode: 8
+  release_date:
   description: Homer becomes an internet recapper while Krusty joins the circus.
   disneyplus_id: b5aeb3d3-3cc3-4e91-a32a-1b33b683b4f9
   simpsonsworld_id:
@@ -67,6 +75,7 @@ episodes:
 - title: Daddicus Finch
   season: 30
   episode: 9
+  release_date:
   description: Lisa reads "To Kill a Mockingbird" and observes similarities between her dad and Atticus Finch.
   disneyplus_id: 057a8476-019d-4196-8601-38ba7aa0fcad
   simpsonsworld_id:
@@ -75,6 +84,7 @@ episodes:
 - title: "'Tis the 30th Season"
   season: 30
   episode: 10
+  release_date:
   description: The Simpsons try to spend a relaxing Florida Christmas.
   disneyplus_id: 6676b4c4-75d0-4d1f-8384-e5da1fb4ec2c
   simpsonsworld_id:
@@ -83,6 +93,7 @@ episodes:
 - title: Mad About the Toy
   season: 30
   episode: 11
+  release_date:
   description: Grampa learns a startling secret from his past. It takes him to Texas to find a long-lost life.
   disneyplus_id: 9595ca10-574c-4a98-9d06-d3a3d9cfa9ff
   simpsonsworld_id:
@@ -91,6 +102,7 @@ episodes:
 - title: The Girl on the Bus
   season: 30
   episode: 12
+  release_date:
   description: Lisa discovers the ideal family... and lies about her own.
   disneyplus_id: 381dd896-c62b-418d-8139-9901022e8c7b
   simpsonsworld_id:
@@ -99,6 +111,7 @@ episodes:
 - title: I'm Dancing as Fat as I Can
   season: 30
   episode: 13
+  release_date:
   description: When Homer breaks a promise and binge watches a show without Marge, she is more furious than ever.
   disneyplus_id: 5e947ef5-874d-4e6d-8d7b-9c0f6418c95f
   simpsonsworld_id:
@@ -107,6 +120,7 @@ episodes:
 - title: The Clown Stays in the Picture
   season: 30
   episode: 14
+  release_date:
   description: On a podcast Krusty discusses a lost film he made in the ‘80s.
   disneyplus_id: d3a79e2f-0900-427d-8a99-aed99216af5c
   simpsonsworld_id:
@@ -115,6 +129,7 @@ episodes:
 - title: 101 Mitigations
   season: 30
   episode: 15
+  release_date:
   description: Homer goes on a joyride and is threatened with prison by Comic Book Guy.
   disneyplus_id: cc74c61c-b33f-487b-b9bf-c78e794aadef
   simpsonsworld_id:
@@ -123,6 +138,7 @@ episodes:
 - title: I Want You (She's So Heavy)
   season: 30
   episode: 16
+  release_date:
   description: Homer gets an inguinal hernia which comes to life and tells him to take it easy.
   disneyplus_id: 7cfaf421-8641-4f8a-bf33-b5aa8ce65e8b
   simpsonsworld_id:
@@ -131,6 +147,7 @@ episodes:
 - title: E My Sports
   season: 30
   episode: 17
+  release_date:
   description: Bart earns money in a video game competition, and Homer becomes his coach.
   disneyplus_id: 54f1162d-019a-4731-a951-9f0db6abb64d
   simpsonsworld_id:
@@ -139,6 +156,7 @@ episodes:
 - title: Bart vs. Itchy and Scratchy
   season: 30
   episode: 18
+  release_date:
   description: Bart is upset to learn there is a new, all-girl version of Itchy and Scratchy.
   disneyplus_id: 8b656b44-85db-4ecd-bae5-a3258eb8e9f6
   simpsonsworld_id:
@@ -147,6 +165,7 @@ episodes:
 - title: Girl's in the Band
   season: 30
   episode: 19
+  release_date:
   description: Lisa joins an advanced youth orchestra in Capital City, throwing the family’s lives into havoc.
   disneyplus_id: df2fda5d-4585-424a-a2d5-35a4a5178067
   simpsonsworld_id:
@@ -155,6 +174,7 @@ episodes:
 - title: I'm Just a Girl Who Can't Say D'oh
   season: 30
   episode: 20
+  release_date:
   description: Marge becomes director of a local theater production.
   disneyplus_id: 1178d9bf-9372-4847-aee2-66e2b7aa84ad
   simpsonsworld_id:
@@ -163,6 +183,7 @@ episodes:
 - title: D'oh Canada
   season: 30
   episode: 21
+  release_date:
   description: Lisa goes to Canada and refuses to leave. A desperate Marge tries to get her back.
   disneyplus_id: 1dd944b3-cda9-4ae7-8bb9-7391e793104e
   simpsonsworld_id:
@@ -171,6 +192,7 @@ episodes:
 - title: Woo-Hoo Dunnit?
   season: 30
   episode: 22
+  release_date:
   description: $600 theft rocks the Simpson home. A local TV crime show attempts to crack it to no avail.
   disneyplus_id: 106f5152-8b8a-497c-a823-b10e809f717e
   simpsonsworld_id:
@@ -179,6 +201,7 @@ episodes:
 - title: Crystal Blue-Haired Persuasion
   season: 30
   episode: 23
+  release_date:
   description: Marge sells crystals and makes a fortune.
   disneyplus_id: 553af900-6995-420a-8230-61ae64ca9c9a
   simpsonsworld_id:
